# ViT-TensorRT

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: deploy_tensorrt_engine.ipynb  example_train.py  experiments.ipynb  layer_investigations.ipynb
src/vit_tensorrt/: __init__.py  config.py  data.py  main.py  vit.py  vit_config.py
src/vit_tensorrt/analysis/: __init__.py  stats_calculator.py
src/vit_tensorrt/config/: __init__.py  attention_config.py  encoder_config.py  mlp_config.py  train_config.py  vit_config.py
src/vit_tensorrt/data/: __init__.py  vit_dataset.py  vit_predict_image_transform.py  vit_train_image_transform.py
src/vit_tensorrt/model/: encoder.py  encoder_block.py  mlp_block.py  vit.py
src/vit_tensorrt/utils/: __init__.py  meta_logger.py
tests/: test_data.py  test_vit.py
tests/analysis/: test_stats_calculator.py
tests/data/: test_vit_dataset.py  test_vit_predict_image_transform.py  test_vit_train_image_transform.py
tests/model/: test_vit.py
