[project]
name = "ViT-TensorRT"
version = "0.1.0"
description = "A re-implementation of ViT containing utilities to convert to TensorRT engines and run in Triton."
authors = [
    {name = "KyleNewman97", email = "kyle@thenewmans.com.au"},
]
dependencies = [
    "torch>=2.4.1",
    "numpy>=2.1.1",
    "pydantic>=2.9.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "notebook>=7.2.2",
]
